# AdventOfCode2025

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: lib.rs  main.rs
