[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"
default-run = "aoc2025"

[lib]
name = "aoc"
proc-macro = true

[profile.dev]
overflow-checks = false

[lints.clippy]
zero_prefixed_literal = "allow"
items_after_test_module = "allow"

[dependencies]
hashbrown = "0.14.3"
itertools = "0.12.0"

# proc-macros
quote = "1.0.33"
regex = "1.11.1"
syn = { version = "1.0.0", features = ["full"] }
